Correct text-alignment for RTL. (Fixes #1)
Now I understand a bit more about this we also need to set the
text-direction back to ltr, as well as changing the alignment.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
-.dir-rtl .CodeMirror-lines {
+.dir-rtl .CodeMirror {
     text-align: left;
+    direction: ltr;
 }
